--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
  <br></p>
        <br>
-       <img src="IMG/Michell.jpg" alt="Instituto Michell">
+       <a href="https://www.michellsc.com/?fbclid=IwAR3pQHopkp_dhkJV9fpAyG6csQxOpaOafpjotCk2bX7VeB3bY65lEnFs_Y8"><img src="IMG/Michell.jpg" alt="Instituto Michell"></a>
 
         <a href="https://www.michellsc.com/?fbclid=IwAR3pQHopkp_dhkJV9fpAyG6csQxOpaOafpjotCk2bX7VeB3bY65lEnFs_Y8"> <strong>"INSTITUTO MICHELL"</strong> </a></p>
         <br>
